[gd_scene load_steps=7 format=2]

[ext_resource path="res://sprites/watchBase.png" type="Texture" id=1]
[ext_resource path="res://sprites/watchHandSmall.png" type="Texture" id=2]
[ext_resource path="res://sprites/watchBaseSmall.png" type="Texture" id=3]
[ext_resource path="res://sprites/watchHand.png" type="Texture" id=4]
[ext_resource path="res://sprites/button.png" type="Texture" id=5]
[ext_resource path="res://Watch.gd" type="Script" id=6]

[node name="Watch" type="Node2D"]
position = Vector2( 256, 35 )
script = ExtResource( 6 )
WATCH_HAND_SMALL_REVOLUTION_PERIOD = 0.5

[node name="Button" type="Sprite" parent="."]
position = Vector2( 528, 260 )
scale = Vector2( 1.34107, 1.34107 )
texture = ExtResource( 5 )

[node name="WatchBase" type="Sprite" parent="."]
position = Vector2( 256, 256 )
texture = ExtResource( 1 )

[node name="WatchBaseSmall" type="Sprite" parent="."]
position = Vector2( 363, 263 )
scale = Vector2( 0.92345, 0.92345 )
texture = ExtResource( 3 )
offset = Vector2( -1.08289, -2.16577 )

[node name="WatchHand" type="Sprite" parent="."]
position = Vector2( 256, 256 )
scale = Vector2( 0.988831, 0.988831 )
texture = ExtResource( 4 )
offset = Vector2( -3.05176e-05, -56.6325 )

[node name="WatchHandSmall" type="Sprite" parent="."]
position = Vector2( 362, 263 )
scale = Vector2( 0.948529, 0.948529 )
texture = ExtResource( 2 )
offset = Vector2( 0, -22.1395 )

[node name="Timer" type="Timer" parent="."]

[node name="TimerSweetSpot" type="Timer" parent="."]
wait_time = 0.3
one_shot = true
autostart = true

[node name="ColorRect" type="ColorRect" parent="."]
show_behind_parent = true
light_mask = 0
margin_left = -256.0
margin_top = -35.0
margin_right = 768.0
margin_bottom = 565.0
color = Color( 0.0941176, 0.0901961, 0.0862745, 1 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
